# Controller-for-UAV-Landing

./: .gitignore  CMakeLists.txt  README.md  discretizarPID.m  obter_trajetoria.m  package.xml
drafts/: AutonomousDrone.cpp  AutonomousDrone.hpp  PIDController.cpp  PIDController.hpp  Solution.hpp
include/: AutonomousDrone.cpp  AutonomousDrone.hpp  Drone.cpp  Drone.hpp  FSM.cpp  FSM.hpp  MultiAxisPIDController.cpp  MultiAxisPIDController.hpp  PIDController.cpp  PIDController.hpp  State.cpp  State.hpp  Trajectory.cpp  Trajectory.hpp
results/: BASE_MEASURED__1.000000.csv  BASE_TRUTH__1.000000.csv  HORZ_1.500000__0.200000__0.100000.csv  VERT_1.000000__0.250000__0.250000.csv  horizontal.py  landing.py  report.py  trajectory.py  vertical.py
results/data/: HORZ_1.000000__0.000000__0.000000.csv  HORZ_1.200000__0.000000__0.000000.csv  HORZ_1.350000__1.080000__0.420000.csv  HORZ_1.500000__0.000000__0.000000.csv  HORZ_1.800000__0.000000__0.000000.csv  HORZ_2.000000__0.000000__0.000000.csv  HORZ_2.200000__0.000000__0.000000.csv  HORZ_2.500000__0.000000__0.000000.csv  HORZ_2.750000__0.000000__0.000000.csv  HORZ_3.000000__0.000000__0.000000.csv  VERT_10.000000__0.000000__0.000000.csv  VERT_10.500000__0.000000__0.000000.csv  VERT_11.000000__0.000000__0.000000.csv  VERT_11.500000__0.000000__0.000000.csv  VERT_12.000000__0.000000__0.000000.csv  VERT_6.900000__11.500000__1.035000.csv  VERT_8.500000__0.000000__0.000000.csv  VERT_9.000000__0.000000__0.000000.csv  VERT_9.500000__0.000000__0.000000.csv
results/data/horizontal/: HORZ_0.200000__0.000000__0.000000.csv  HORZ_0.250000__0.000000__0.000000.csv  HORZ_0.300000__0.000000__0.000000.csv  HORZ_0.400000__0.000000__0.000000.csv  HORZ_0.400000__0.250000__0.000000.csv  HORZ_0.400000__0.500000__0.000000.csv  HORZ_0.400000__0.800000__0.000000.csv  HORZ_0.400000__0.800000__0.050000.csv  HORZ_0.400000__0.800000__0.100000.csv  HORZ_0.400000__0.800000__0.150000.csv  HORZ_0.400000__0.800000__0.200000.csv  HORZ_0.400000__1.000000__0.000000.csv  HORZ_0.500000__0.000000__0.000000.csv  HORZ_0.500000__0.800000__0.000000.csv  HORZ_0.650000__0.800000__0.000000.csv  HORZ_0.700000__0.800000__0.000000.csv  HORZ_0.750000__0.000000__0.000000.csv  HORZ_0.800000__0.850000__0.000000.csv  HORZ_0.900000__0.850000__0.000000.csv  HORZ_0.950000__0.850000__0.000000.csv  HORZ_1.000000__0.000000__0.000000.csv  HORZ_1.000000__0.100000__0.000000.csv  (+8 more)
src/: AutonomousDrone.cpp  AutonomousDrone.hpp  autonomous_landing.cpp  horizontalStepResponse.cpp  precisionLanding.cpp  verticalStepResponse.cpp
(+42 files in other folders)
